--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Newer Company Inc.</title>
   </head>
   <body>
-  <main>
-    <div class="skip"><a href="">Skip to Main Content</a></div>
+
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
       <nav>
           <ul>
@@ -21,7 +21,7 @@
           </ul>
         </nav>
     </header>
-  </main>
+
     <main class="container" id = "main">
       <div class = overview>
         <h1>New Company Inc.</h1>
